--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -21,7 +21,7 @@ jobs:
           go-version: 1.22
 
       - name: build
-        run: go build -o bin/sarkari-naukari cmd/sarkari-naukari/main.go
+        run: go build -o sarkari-naukari
 
       - name: Test
         run: go test ./...
@@ -35,7 +35,7 @@ jobs:
       - name: run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: 1.56.2
+          version: v1.56.2
           
   push:
     runs-on: ubuntu-latest
