--- a/helm/sarkari-naukari-chart/templates/ingress.yaml
+++ b/helm/sarkari-naukari-chart/templates/ingress.yaml
@@ -8,7 +8,7 @@ spec:
   ingressClassName: nginx
   rules:
   - host: rentro.tech
-  - http:
+    http:
       paths:
       - path: /
         pathType: Prefix
