--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -61,7 +61,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/sarkari-naukari:${{github.run_id}}
 
-  update-newtag-in-helm-chart:
+  update-helm-chart:
     runs-on: ubuntu-latest
     needs: push
     steps:
