--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths-ignore:
       - 'readme.md'
-#      - 'helm/**'
+      - 'helm/**'
 
 jobs:
   build:
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Go 1.22
-        uses: actions/setup-go@v2
+      - name: Set up Go 1.22.2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.22
+          go-version: 1.22.2
 
       - name: build
         run: go build -o sarkari-naukari
